fix: swagger route path
